[inputoutput] Fixing unit tests.
Signed-off-by: Stéphane Galland <galland@arakhne.org>